Fix visible scroll bar on blog/docs codeblocks

--- a/resources/css/front/utilities/markup.css
+++ b/resources/css/front/utilities/markup.css
@@ -265,8 +265,8 @@
     @apply py-7.5;
     @apply my-6;
     @apply rounded-lg;
-    @apply overflow-hidden;
-    @apply overflow-x-scroll;
+    @apply overflow-y-hidden;
+    @apply overflow-x-auto;
     @apply bg-oss-gray-light;
     @apply text-[15px];
     @apply leading-relaxed;
